Tests/StellaTests/Resources/printed-code/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/check_inl.st
language core;

extend with #sum-types;

fn main(succeed : Bool) -> Nat + Bool {
    return inl(true)
}